# focusly

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
ai_service/: main.py
app/: auth.py  db.py  main.py  models.py  repositories.py  schemas.py  services.py
app/routers/: auth.py  preferences.py  suggestions.py  tasks.py
docs/: EX3-notes.md
docs/runbooks/: compose.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: authApi.ts  client.ts  preferencesApi.ts  suggestionsApi.ts  tasksApi.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/common/: Badge.tsx  Button.tsx  ConfirmDialog.tsx  EmptyState.tsx  LoadingSpinner.tsx
frontend/src/components/dashboard/: FocusCard.tsx  RecentTasks.tsx  StatCard.tsx  TaskCalendar.tsx
frontend/src/components/layout/: PageShell.tsx  Sidebar.tsx
frontend/src/components/tasks/: FilterBar.tsx  (+3 more)
frontend/src/context/: AuthContext.tsx  TaskCountContext.tsx  ToastContext.tsx
frontend/src/hooks/: usePreferences.ts  useTasks.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  PreferencesPage.tsx  RegisterPage.tsx  TasksPage.tsx
frontend/src/test/: Badge.test.tsx  exporters.test.ts  formatters.test.ts
frontend/src/types/: index.ts
frontend/src/utils/: exporters.ts  formatters.ts
scripts/: demo.sh  refresh.py  seed.py
tests/: conftest.py  test_auth.py  test_preferences.py  test_refresh.py  test_suggestions.py  test_tasks.py
worker/: Dockerfile  main.py
